fix spacing issues and add discord jpg

--- a/src/components/contactinfo.module.css
+++ b/src/components/contactinfo.module.css
@@ -6,6 +6,8 @@
   left: 10px;
   border-radius: 10px;
   padding: 10px;
+  line-height: 1.5rem;
+  padding-top: 6px;
   background-color: black;
   color: white;
   white-space: nowrap;
