--- a/src/components/wrapper.module.css
+++ b/src/components/wrapper.module.css
@@ -1,5 +1,5 @@
 .wrapper {
     margin: 0 auto;
-    max-width: 1200px;
+    max-width: 70%;
     width: 100%;
 }
